--- a/styles.css
+++ b/styles.css
@@ -47,11 +47,27 @@ img {
   --verde: #7ac943;
 }
 
-body {
+body, header, section {
   align-items: center;
   background-color: var(--gris-medio);
   display: flex;
   flex-direction: column;
+  width: 100%;
+}
+.skip-link{
+  height: 0;
+}
+
+.skip-link:focus,
+.skip-link:active{
+  background: var(--verde);
+  border-radius: 5px;
+  color: var(--gris-oscuro);
+  font-family: var(--secondary-font);
+  height: auto;
+  margin: 16px 0 8px;
+  padding: 8px;
+  text-decoration: none;
 }
 
 .header {
@@ -68,7 +84,6 @@ body {
 }
 
 .header-img {
-  background: center / contain no-repeat url(./images/juliana.jpeg);
   border-radius: 50%;
   border: 1px solid var(--gris-oscuro);
   box-shadow: 8px 16px 32px 0px var(--shadow);
@@ -77,13 +92,22 @@ body {
   width: 300px;
 }
 
+nav{
+  width: 100%;
+}
+
 .navigation {
   color: var(--blanco);
   cursor: pointer;
   display: flex;
   justify-content: space-around;
-  margin: 24px 0;
+  margin: 24px auto;
   width: 50%;
+}
+
+.nav-item a{
+  text-decoration: none;
+  color: var(--blanco);
 }
 
 .nav-item {
@@ -96,13 +120,26 @@ body {
   width: 33%;
 }
 
-.nav-item:hover {
+.nav-item:hover,
+.nav-item:hover a {
+  background-color: var(--verde);
+  color: var(--gris-oscuro);
+  cursor: pointer;
+}
+
+.nav-item:focus-within{
   background-color: var(--verde);
 }
 
+.nav-item a:focus{
+  outline: none;
+  color: var(--gris-oscuro);
+}
+
 .intro {
-  margin: 0 196px;
+  margin: 24px 126px 0;
   font-family: var(--secondary-font);
+  color: var(--blanco);
 }
 
 .social-media {
@@ -111,6 +148,20 @@ body {
   justify-content: space-around;
   margin: 32px auto 0;
   width: 20%;
+}
+
+.social-media li a{
+  align-items: center;
+  display: flex;
+  color: var(--blanco);
+  font-family: var(--secondary-font);
+  text-decoration: none;
+  margin-right: 35px;
+}
+
+.social-link-text{
+  padding-right: 8px;
+  padding-left: 8px;
 }
 
 .carousel {
@@ -130,6 +181,14 @@ body {
   width: 1500px;
 }
 
+.project-container li{
+  display: inline-block;
+}
+.project-container button{
+  background: none;
+  border: none;
+}
+
 .project {
   border-radius: 5px;
   border: 2px solid #000;
@@ -138,31 +197,12 @@ body {
   margin: 0 8px;
   transition: all 0.2s ease-in-out;
   width: 250px;
+  object-fit: cover;
 }
 
 .project:hover {
   cursor: pointer;
   transform: scale(1.1);
-}
-
-.project1 {
-  background: center / cover no-repeat url(./images/project1.png);
-}
-
-.project2 {
-  background: center / cover no-repeat url(./images/project2.png);
-}
-
-.project3 {
-  background: center / cover no-repeat url(./images/project3.png);
-}
-
-.project4 {
-  background: center / cover no-repeat url(./images/project4.png);
-}
-
-.project5 {
-  background: center / cover no-repeat url(./images/project5.png);
 }
 
 .arrow {
@@ -223,6 +263,7 @@ input {
   margin-bottom: 48px;
   width: 150px;
   margin-left: auto;
+  font-size: 16px;
 }
 
 .notification {
@@ -272,4 +313,8 @@ input {
   height: 400px;
   margin: 16px;
   width: 550px;
+}
+
+.form-label{
+  color: var(--blanco);
 }
