--- a/styles.css
+++ b/styles.css
@@ -159,6 +159,15 @@ nav{
   margin-right: 35px;
 }
 
+.social-media li a:focus{
+  outline: none;
+}
+
+.social-media li:focus-within{
+  outline: 3px solid var(--verde);
+  padding: 8px;
+}
+
 .social-link-text{
   padding-right: 8px;
   padding-left: 8px;
@@ -173,6 +182,7 @@ nav{
 .window {
   overflow: hidden;
   width: 805px;
+  padding: 8px;
 }
 
 .project-container {
@@ -187,6 +197,11 @@ nav{
 .project-container button{
   background: none;
   border: none;
+  padding: 0;
+}
+
+.project-container button:focus-within {
+  outline: 3px solid var(--verde);
 }
 
 .project {
@@ -227,6 +242,10 @@ nav{
   border-radius: 50%;
 }
 
+.arrow:focus{
+  outline: 3px solid var(--verde);
+}
+
 .contact-section {
   align-items: center;
   background-color: var(--gris-oscuro);
@@ -247,8 +266,12 @@ nav{
 }
 
 input {
-  outline: none;
   width: 100%;
+}
+
+.input:focus {
+  outline: 3px solid var(-verde);
+  padding: 8px;
 }
 
 .send-button {
