--- a/styles.css
+++ b/styles.css
@@ -204,7 +204,7 @@ nav{
   outline: 3px solid var(--verde);
 }
 
-.project {
+.project-img {
   border-radius: 5px;
   border: 2px solid #000;
   display: inline-block;
@@ -274,6 +274,7 @@ input {
   padding: 8px;
 }
 
+.modal-button,
 .send-button {
   align-items: center;
   background-color: var(--verde);
@@ -289,12 +290,23 @@ input {
   font-size: 16px;
 }
 
+.send-button:focus,
+.modal-button:focus{
+  border: 5px solid var(--gris-oscuro);
+  outline: 3px solid var(--verde);
+}
+
+#name-error{
+  color: var(--blanco);
+  font-family: var(--secondary-font);
+}
+
 .notification {
   align-items: center;
   background-color: var(--verde);
   border-radius: 5px;
   box-shadow: 8px 16px 32px 0px var(--shadow);
-  color: var(--blanco);
+  color: var(--gris-oscuro);
   display: none;
   font-family: var(--secondary-font);
   height: 50px;
@@ -315,6 +327,10 @@ input {
   width: 100vw;
 }
 
+.modal-header{
+  outline: 3px solid var(--verde);
+}
+
 .modal {
   align-items: center;
   background-color: var(--gris-oscuro);
@@ -327,6 +343,7 @@ input {
   position: fixed;
   top: 15%;
   width: 700px;
+  padding: 56px;
 }
 
 .modal-project-image {
